--- a/School.UI/Views/StudentAttendance/_ViewStudentAttendance.cshtml
+++ b/School.UI/Views/StudentAttendance/_ViewStudentAttendance.cshtml
@@ -217,7 +217,7 @@
             ClassValidationHelper.errorEmptyField();
             return isvalid
         }
-        //debugger;
+        debugger;
         var nomberOfRows = Number(@nomberOfRows) + 1;
 
         var grade = $("#gradeId option:selected").val();
