--- a/School.UI/Views/Grade/_TableGrade.cshtml
+++ b/School.UI/Views/Grade/_TableGrade.cshtml
@@ -73,7 +73,7 @@
             'Grade': Grade.trim()
         };
         var header = 'Edit Drade';
-        var url = '/Grade/PreUpdate';
+        var url = '/Grade/UpdateView';
 
         var objPopup = classPageConstant.popupChildOne;
         var pageObj = { function: "popup", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: objPopup };
