--- a/School.UI/Views/GradeTeacher/_TableGradeTeacher.cshtml
+++ b/School.UI/Views/GradeTeacher/_TableGradeTeacher.cshtml
@@ -63,7 +63,7 @@
         //objPage.partialHolder = "#Home-Container #childPage #partialHolder"
         //objPage.header = 'Edit Course';
         //objPage.type = 'Post';
-        //objPage.url = '/Grade/PreUpdate';
+        //objPage.url = '/Grade/UpdateView';
         //objPage.data = data;
 
         //controllerHelper.requestController({ pageType: "popup", pageData: objPage });
