--- a/School.UI/Views/Student/_TableStudent.cshtml
+++ b/School.UI/Views/Student/_TableStudent.cshtml
@@ -74,7 +74,7 @@
         };
 
         var header = 'Update Student';
-        var url = '/Student/PreUpdate';
+        var url = '/Student/UpdateView';
         var objPopup = classPageConstant.popupChildOne;
         var pageObj = { function: "popup", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: objPopup };
         classControllerHelper.callController(pageObj);
