--- a/School.UI/Views/StudentResult/_ViewStudent.cshtml
+++ b/School.UI/Views/StudentResult/_ViewStudent.cshtml
@@ -201,7 +201,7 @@
         //objPage.partialHolder = "#Home-Container #childPage #partialHolder"
         //objPage.header = 'Upload File';
         //objPage.type = 'Post';
-        //objPage.url = '/Student/PreUpdate';
+        //objPage.url = '/Student/UpdateView';
         //objPage.data = data;
 
         //controllerHelper.requestController({ pageType: "popup", pageData: objPage });
