--- a/School.UI/Views/Subject/_TableSubject.cshtml
+++ b/School.UI/Views/Subject/_TableSubject.cshtml
@@ -59,7 +59,7 @@
                     };
 
                     var header = 'Edit Drade';
-                    var url = '/Subject/PreUpdate';
+                    var url = '/Subject/UpdateView';
 
                     var objPopup = classPageConstant.popupChildOne;
                     var pageObj = { function: "popup", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: objPopup };
