--- a/School.UI/Views/SubjectMarks/_TableCourse.cshtml
+++ b/School.UI/Views/SubjectMarks/_TableCourse.cshtml
@@ -54,7 +54,7 @@
         objPage.partialHolder = "#Home-Container #childPage #partialHolder"
         objPage.header = 'Edit Course';
         objPage.type = 'Post';
-        objPage.url = '/Subject/PreUpdate';
+        objPage.url = '/Subject/UpdateView';
         objPage.data = data;
 
         controllerHelper.requestController({ pageType: "popup", pageData: objPage });
