--- a/School.UI/Views/Teacher/_TableGrade.cshtml
+++ b/School.UI/Views/Teacher/_TableGrade.cshtml
@@ -49,7 +49,7 @@
 
         var partialHolder = "#basePartialHolder #partialHolder";
         var header = 'Edit Drade';
-        var url = '/Grade/PreUpdate';
+        var url = '/Grade/UpdateView';
 
         var objPopup = classPageConstant.popupChildOne;
         var pageObj = { function: "popup", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: objPopup };
@@ -60,7 +60,7 @@
         //objPage.partialHolder = "#Home-Container #childPage #partialHolder"
         //objPage.header = 'Edit Course';
         //objPage.type = 'Post';
-        //objPage.url = '/Grade/PreUpdate';
+        //objPage.url = '/Grade/UpdateView';
         //objPage.data = data;
 
         //controllerHelper.requestController({ pageType: "popup", pageData: objPage });
