--- a/School.UI/Views/SubjectTeacher/_TableSubjectTeacher.cshtml
+++ b/School.UI/Views/SubjectTeacher/_TableSubjectTeacher.cshtml
@@ -46,7 +46,7 @@
 
         var partialHolder = "#basePartialHolder #partialHolder";
         var header = 'Edit Subject';
-        var url = '/Subject/PreUpdate';
+        var url = '/Subject/UpdateView';
 
         var objPopup = classPageConstant.popupChildOne;
         var pageObj = { function: "popup", url: url, type: "Post", data: data, header: header, pageId: "", objPopup: objPopup };
