--- a/School.UI/Views/Timesheet/_ViewTimesheet.cshtml
+++ b/School.UI/Views/Timesheet/_ViewTimesheet.cshtml
@@ -320,7 +320,7 @@
         //objPage.partialHolder = "#Home-Container #childPage #partialHolder"
         //objPage.header = 'Upload File';
         //objPage.type = 'Post';
-        //objPage.url = '/Student/PreUpdate';
+        //objPage.url = '/Student/UpdateView';
         //objPage.data = data;
 
         //controllerHelper.requestController({ pageType: "popup", pageData: objPage });
